# state_controller

./: CMakeLists.txt  CMakePresets.json  README.md
aTest/: CMakeLists.txt  Test01.cpp  Test02.cpp
doc/: Design.md  graph TD.mmd  sequenceDiagram.mmd
libController/: CMakeLists.txt  Controller.cpp  Controller.h  CoolingState.cpp  CoolingState.h  DiurnalSurfaceModel.cpp  DiurnalSurfaceModel.h  Event.h  HeatingState.cpp  HeatingState.h  HomeHeatModel.cpp  HomeHeatModel.h  IdleState.cpp  IdleState.h  SetPointState.cpp  SetPointState.h  State.cpp  State.h  constants.h
theApp/: CMakeLists.txt  ControlSlider.cpp  ControlSlider.h  MainWindow.cpp  MainWindow.h  mainwindow.ui  resources.qrc  theApp.cpp
